unpackaged/main/default/objects/AcctSeed__Project_Task__c/fields/Account_Alias__c.field-meta.xml
<CustomField>
    <fullName>Account_Alias__c</fullName>
    <formula>AcctSeed__Project__r.Account_Alias__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Alias</label>
    <type>Text</type>
</CustomField>