unpackaged/main/default/objects/AcctSeed__Project_Task__c/fields/AcctSeed__Labor_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Labor_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Upon posting a Time Card. A debit entry will be made to this GL Account and a corresponding credit entry will be made to the Labor GL Account set in the Accounting Settings Tab for each Time Card Day.</inlineHelpText>
    <label>Expense GL Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__GL_Account__c.AcctSeed__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Expense</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__GL_Account__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>