unpackaged/main/default/objects/AcctSeed__Project_Task__c/fields/AcctSeed__Task_Report_Name__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Task_Report_Name__c</fullName>
    <formula>IF( AcctSeed__Sort_Order__c &lt; 10, "00" &amp; Text( AcctSeed__Sort_Order__c ) &amp; " " &amp; Name, 
IF(AND( AcctSeed__Sort_Order__c &gt;= 10, AcctSeed__Sort_Order__c &lt; 100), "0" &amp; Text( AcctSeed__Sort_Order__c ) &amp; " " &amp; Name, 
Text(AcctSeed__Sort_Order__c ) &amp; " " &amp; Name))</formula>
    <label>Task Report Name</label>
    <type>Text</type>
</CustomField>