unpackaged/main/default/objects/AcctSeed__Project_Task__c/fields/Calendar_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Display_Name__c</fullName>
    <formula>AcctSeed__Project__r.AcctSeed__Opportunity__r.Contract_Number__c + "-" + AcctSeed__Project__r.AcctSeed__Opportunity__r.Name + " - " +  Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar Display Name</label>
    <type>Text</type>
</CustomField>