unpackaged/main/default/objects/AcctSeed__Project_Task__c/fields/Connectwise_Migration_Flag__c.field-meta.xml
<CustomField>
    <fullName>Connectwise_Migration_Flag__c</fullName>
    <formula>AcctSeed__Project__r.Connectwise_Migration_Flag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connectwise Migration Flag</label>
    <type>Checkbox</type>
</CustomField>