unpackaged/main/default/objects/AcctSeed__Project_Task__c/fields/End_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Text__c</fullName>
    <formula>Text( AcctSeed__End_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date Text</label>
    <type>Text</type>
</CustomField>