unpackaged/main/default/objects/AcctSeed__Project_Task__c/fields/Net_Opportunity_Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Opportunity_Booking_Amount__c</fullName>
    <formula>AcctSeed__Project__r.AcctSeed__Opportunity__r.Net_Opportunity_Booking_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Opportunity Booking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>