unpackaged/main/default/objects/AcctSeed__Project_Task__c/fields/OPP_Install_Status__c.field-meta.xml
<CustomField>
    <fullName>OPP_Install_Status__c</fullName>
    <formula>text( AcctSeed__Project__r.AcctSeed__Opportunity__r.Install_Status_Opp__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OPP Install Status</label>
    <type>Text</type>
</CustomField>