unpackaged/main/default/objects/AcctSeed__Project_Task__c/fields/PC_Install_10__c.field-meta.xml
<CustomField>
    <fullName>PC_Install_10__c</fullName>
    <formula>IF(AcctSeed__Responsibility__r.FirstName +" "+AcctSeed__Responsibility__r.LastName="Robbie Odell",  Project_Calendar_Description__c , "" )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installer-Robbie Odell</label>
    <type>Text</type>
</CustomField>