unpackaged/main/default/objects/AcctSeed__Project_Task__c/fields/PC_Install_1__c.field-meta.xml
<CustomField>
    <fullName>PC_Install_1__c</fullName>
    <formula>IF(AcctSeed__Responsibility__r.FirstName +" "+AcctSeed__Responsibility__r.LastName="Scott Flynn",  Project_Calendar_Description__c , "" )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installer-Scott Flynn</label>
    <type>Text</type>
</CustomField>