unpackaged/main/default/objects/AcctSeed__Project_Task__c/fields/PC_Install_2__c.field-meta.xml
<CustomField>
    <fullName>PC_Install_2__c</fullName>
    <formula>IF(AcctSeed__Responsibility__r.FirstName +" "+AcctSeed__Responsibility__r.LastName="Robert Odell",  Project_Calendar_Description__c , "" )</formula>
    <label>Installer-Robert Odell</label>
    <type>Text</type>
</CustomField>