unpackaged/main/default/objects/AcctSeed__Project_Task__c/fields/Project_Calendar_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Calendar_End_Date__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Calendar End Date</label>
    <referenceTo>Project_Calendar__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>