unpackaged/main/default/objects/AcctSeed__Project_Task__c/fields/Project_Manager_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Full_Name__c</fullName>
    <formula>AcctSeed__Project__r.AcctSeed__Project_Manager__r.FirstName + " " +  AcctSeed__Project__r.AcctSeed__Project_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Manager Full Name</label>
    <type>Text</type>
</CustomField>