unpackaged/main/default/objects/AcctSeed__Project_Task__c/fields/Project_Manager_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_ID__c</fullName>
    <formula>AcctSeed__Project__r.AcctSeed__Project_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Manager ID</label>
    <type>Text</type>
</CustomField>