unpackaged/main/default/objects/AcctSeed__Project_Task__c/fields/Responsible_Group__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Group__c</fullName>
    <label>Responsible Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesperson</fullName>
            </value>
            <value>
                <fullName>Salesperson and Ownership</fullName>
            </value>
            <value>
                <fullName>Sales/Crossvergence</fullName>
            </value>
            <value>
                <fullName>Cross Vergence</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Sales and Operations</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Sales Engineer</fullName>
            </value>
            <value>
                <fullName>Project Manager and Assigned Engineer</fullName>
            </value>
            <value>
                <fullName>Assigned Engineer</fullName>
            </value>
            <value>
                <fullName>Warehouse and Assigned Engineer</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>