unpackaged/main/default/objects/AcctSeed__Project_Task__c/fields/Standard_Duration__c.field-meta.xml
<CustomField>
    <fullName>Standard_Duration__c</fullName>
    <label>Standard Duration</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>