unpackaged/main/default/objects/AcctSeed__Project_Task__c/fields/Start_Date_Padding__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Padding__c</fullName>
    <label>Start Date Padding</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>