unpackaged/main/default/objects/AcctSeed__Project_Task__c/fields/Task_Comment__c.field-meta.xml
<CustomField>
    <fullName>Task_Comment__c</fullName>
    <label>Task Comment</label>
    <type>TextArea</type>
</CustomField>