unpackaged/main/default/objects/AcctSeed__Project_Task__c/fields/Task_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Task_Quantity__c</fullName>
    <label>Task Quantity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>