unpackaged/main/default/objects/AcctSeed__Project_Task__c/validationRules/AcctSeed__Value_for_Labor_GL_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__Value_for_Labor_GL_Account</fullName>
    <active>false</active>
    <description>Verifies labor gl account field is not blank.</description>
    <errorConditionFormula>ISBLANK( AcctSeed__Labor_GL_Account__c )</errorConditionFormula>
    <errorMessage>A project task must contain a value for the labor gl account field.</errorMessage>
</ValidationRule>